--- a/course.html
+++ b/course.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
 <body>
-    <section class="header">
+    <section class="sub-header">
         <nav>
             <a href="index.html"><img src="images/IMG_5922.PNG"></a>
             <div class="nav-links" id="navLinks">
@@ -24,17 +24,11 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-        <div class="text-box">
-        <h1>World's Biggest University</h1>
-        <p>Making Website is now one of the easiest thing in the world. You 
-            just need to learn HTML,<br> CSS, Javascript and you are good to go 
-        </p>
-        <a href="" class="hero-btn">Visit Us To Know More</a>
-        </div>
+       <h1>Our Courses</h1>
 
     </section>
 
-    <!-------Course------->
+    <!------Course---->
     <section class="course">
         <h1>Courses We Offer</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -64,36 +58,8 @@
         </div>
 
     </section>
-    <!-------campus------>
 
-    <section class="campus">
-        <h1>Our Global Campus</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-        <div class="row">
-            <div class="campus-col">
-                <img src="images/university-old-building-campus-college.jpg">
-                <div class="layer">
-                    <h3>LONDON</h3>
-                </div>
-            </div>
-            <div class="campus-col">
-                <img src="images/about_meredith_blog_2-1.jpg">
-                <div class="layer">
-                    <h3>NEW YORK</h3>
-                </div>
-            </div>
-            <div class="campus-col">
-                <img src="images/20230731VisitMilledgevilleHistoricDay-38_95E70AD1-5056-BF65-D6277A4C7D8187C0-95e70a435056bf6_95e70d99-5056-bf65-d69ef5040af37f50.jpg">
-                <div class="layer">
-                    <h3>WASHINGTON</h3>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <!--------facilities------->
+    <!---------Facilities------>
     <section class="facilities">
         <h1>Our Facilities</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -119,52 +85,9 @@
             </div>
         </div>
     </section>
+    
 
-    <!-------testimonials------>
-    <section class="testimonials">
-        <h1>What Our Student Says</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <div class="row">
-            <div class="testimonial-col">
-                <img src="images/studentmale.jpg">
-                <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Pellentesque aliquet turpis nulla, eleifend faucibus est 
-                        sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus
-                        Donec sit.</p>
-                        <h3>Jameson Milner</h3>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star-o"></i>
-                </div>
-            </div>
-            <div class="testimonial-col">
-                <img src="images/studentfemale.jpg">
-                <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Pellentesque aliquet turpis nulla, eleifend faucibus est 
-                        sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus
-                        Donec sit.</p>
-                        <h3>Celestine Sylvester</h3>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star-half-o"></i>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <!-------Call To Action------>
-    <section class="cta">
-        <h1>Enroll For Our Various Online Courses <br> Anywhere From The World</h1>
-        <a href="" class="hero-btn">CONTACT US</a>
-    </section>
-
+   
      <!-------Footer------>
      <section class="footer">
         <h4>About Us</h4>
