Professional portfolio-ready update: fixed typos, added SEO meta tags, improved accessibility, replaced placeholder content, fixed Font Awesome icons, added animations and favicon

--- a/about.html
+++ b/about.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uviversity Webssite Design</title>
+    <meta name="description" content="Learn about Eduford University's rich history, mission, and commitment to excellence in education since 1950.">
+    <meta name="keywords" content="about Eduford, university history, mission, vision, education">
+    <meta name="author" content="Eduford University">
+    <title>About Us | Eduford University</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎓</text></svg>">
 <body>
     <section class="sub-header">
         <nav>
@@ -30,39 +35,33 @@
 
     
     <!---------about us content--------->
-
     <section class="about-us">
         <div class="row">
             <div class="about-col">
                 <h1>We are the world's largest university</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Pellentesque aliquet turpis nulla, eleifend faucibus
-                    est sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus.
-                    Donec sit amet nisl non justo malesuada fermentum. Donec eget felis dolor. Suspendisse
-                    condimentum vestibulum ex ac cursus. Nam pharetra vivera efficitur. Sed pellentesque
-                    luctus arcu, quis finibus nibh luctus mattis</p>
-                    <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
+                <p>Founded in 1950, Eduford University has grown from a small liberal arts college to one of the world's premier educational institutions. With over 50,000 students across three continents, we offer an unparalleled educational experience that combines academic rigor with real-world application.</p>
+                <p>Our mission is to cultivate critical thinking, foster innovation, and prepare students to become global leaders. We believe in education that transcends borders, disciplines, and traditional boundaries. Our distinguished faculty includes Nobel laureates, industry pioneers, and thought leaders who are passionate about mentoring the next generation.</p>
+                <p>At Eduford, we don't just teach subjects—we inspire transformation. Our graduates go on to lead Fortune 500 companies, conduct groundbreaking research, and make meaningful impacts in communities worldwide.</p>
+                <a href="course.html" class="hero-btn red-btn">EXPLORE OUR PROGRAMS</a>
             </div>
             <div class="about-col">
-                <img src="images/drahomir-hugo-posteby-mach-n4y3eiQSIoc-unsplash.jpg">
+                <img src="images/drahomir-hugo-posteby-mach-n4y3eiQSIoc-unsplash.jpg" alt="Eduford University Campus">
             </div>
         </div>
     </section>
 
-     <!-------Footer------>
-     <section class="footer">
+    <!-------Footer------>
+    <footer class="footer">
         <h4>About Us</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Pellentesque aliquet turpis nulla, eleifend faucibus est <br> 
-            sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus
-            Donec sit.</p>
-            <div class="icons">
-                <i class="fa fa-facebook"></i>
-                <i class="fa fa-twitter"></i>
-                <i class="fa fa-instagram"></i>
-                <i class="fa fa-linkedin"></i>
-            </div>
-     </section>
+        <p>Eduford University is a leading global institution dedicated to academic excellence,<br>innovation, and shaping the leaders of tomorrow since 1950.</p>
+        <div class="icons">
+            <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+        <p class="copyright">&copy; 2024 Eduford University. All rights reserved.</p>
+    </footer>
 
 
 
