--- a/blog.html
+++ b/blog.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uviversity Webssite Design</title>
+    <meta name="description" content="Stay updated with the latest news, events, and insights from Eduford University. Explore our blog for educational content.">
+    <meta name="keywords" content="blog, university news, education, certificates, online programs">
+    <meta name="author" content="Eduford University">
+    <title>Blog | Eduford University</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎓</text></svg>">
 <body>
     <section class="sub-header">
         <nav>
@@ -24,7 +29,7 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-       <h1>Our Certificates & Online Programs For 2024</h1>
+       <h1>Our Certificates & Online Programs For 2025</h1>
 
     </section>
 
@@ -32,41 +37,15 @@
     <section class="blog-content">
         <div class="row">
             <div class="blog-left">
-                <img src="images/bar-1.jpg">
-                <h2>Our Certificates & Online Programs For 2024</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Pellentesque aliquet turpis nulla, eleifend faucibus
-                    est sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus.
-                    Donec sit amet nisl non justo malesuada fermentum. Donec eget felis dolor. Suspendisse
-                    condimentum vestibulum ex ac cursus.</p>
+                <img src="images/bar-1.jpg" alt="Eduford Certificate Programs">
+                <h2>Our Certificates & Online Programs For 2025</h2>
+                <p>In today's rapidly evolving job market, continuous learning is essential for career growth. Eduford University is proud to announce our expanded lineup of professional certificates and online programs for 2025, designed to help you acquire in-demand skills and stay competitive in your field.</p>
                 <br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Pellentesque aliquet turpis nulla, eleifend faucibus
-                    est sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus.
-                    Donec sit amet nisl non justo malesuada fermentum. Donec eget felis dolor. Suspendisse
-                    condimentum vestibulum ex ac cursus. Nam pharetra vivera efficitur. Sed pellentesque
-                    luctus arcu, quis finibus nibh luctus mattis. Vivamus diam turpis, pellentesque
-                    vel magna sit amet, sollicitudin efficitur tortor. Etiam ornare lacinia iaculis.
-                    Cras nec dui eu nibh pharetra condimentum. Vestibulum ultrices sapien vitae arcu
-                    varius volutpat. Integer rhoncus a massa ut aliquam. Sed aliquet, nibh non dictum
-                    ullamcorper, orci arcu posuere tortor, vitae ultrices mulla tortor nec sapien.
-                    Vestibulum ac nibh at leo maximus molestie</p>
-                 <br>
-                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Pellentesque aliquet turpis nulla, eleifend faucibus
-                    est sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus.
-                    Donec sit amet nisl non justo malesuada fermentum. Donec eget felis dolor. Suspendisse
-                    condimentum vestibulum ex ac cursus. Nam pharetra vivera efficitur. Sed pellentesque
-                    luctus arcu, quis finibus nibh luctus mattis. Vivamus diam turpis, pellentesque
-                    vel magna sit amet, sollicitudin efficitur tortor. Etiam ornare lacinia iaculis.
-                    Cras nec dui eu nibh pharetra condimentum.</p>
-                    <br>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Pellentesque aliquet turpis nulla, eleifend faucibus
-                        est sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus.
-                        Donec sit amet nisl non justo malesuada fermentum. Donec eget felis dolor. Suspendisse
-                        condimentum vestibulum ex ac cursus. Nam pharetra vivera efficitur. Sed pellentesque
-                        luctus arcu.</p>
+                <p>Our new programs include cutting-edge courses in Artificial Intelligence, Data Science, Cybersecurity, Digital Marketing, and Sustainable Business Practices. Each program is developed in collaboration with industry leaders to ensure our curriculum meets current market demands. Whether you're looking to upskill, reskill, or explore a new career path, our flexible online format allows you to learn at your own pace without compromising your professional commitments.</p>
+                <br>
+                <p>What sets Eduford's certificate programs apart is our commitment to practical, hands-on learning. Students work on real-world projects, receive mentorship from industry experts, and build portfolios that showcase their abilities to potential employers. Upon completion, you'll earn a recognized credential that can be shared on LinkedIn and added to your resume.</p>
+                <br>
+                <p>Enrollment for our 2025 programs opens January 15th. Early registrants receive a 20% discount and exclusive access to our career services, including resume reviews, interview preparation, and networking events with hiring partners. Don't miss this opportunity to invest in your future—spaces are limited.</p>
 
 
 
@@ -125,20 +104,18 @@
     
 
    
-     <!-------Footer------>
-     <section class="footer">
+    <!-------Footer------>
+    <footer class="footer">
         <h4>About Us</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Pellentesque aliquet turpis nulla, eleifend faucibus est <br> 
-            sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus
-            Donec sit.</p>
-            <div class="icons">
-                <i class="fa fa-facebook"></i>
-                <i class="fa fa-twitter"></i>
-                <i class="fa fa-instagram"></i>
-                <i class="fa fa-linkedin"></i>
-            </div>
-     </section>
+        <p>Eduford University is a leading global institution dedicated to academic excellence,<br>innovation, and shaping the leaders of tomorrow since 1950.</p>
+        <div class="icons">
+            <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+        <p class="copyright">&copy; 2024 Eduford University. All rights reserved.</p>
+    </footer>
 
 
 
