--- a/course.html
+++ b/course.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uviversity Webssite Design</title>
+    <meta name="description" content="Explore Eduford University's comprehensive courses in Business, Technology, Sciences, Arts, and more. Find your perfect program.">
+    <meta name="keywords" content="courses, degrees, programs, undergraduate, postgraduate, online learning">
+    <meta name="author" content="Eduford University">
+    <title>Our Courses | Eduford University</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎓</text></svg>">
 <body>
     <section class="sub-header">
         <nav>
@@ -31,77 +36,62 @@
     <!------Course---->
     <section class="course">
         <h1>Courses We Offer</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <p>Discover our comprehensive range of programs designed to prepare you for success in your chosen career path.</p>
 
         <div class="row">
             <div class="course-col">
-                <h3>Intermediate</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Pellentesque aliquet turpis nulla, eleifend faucibus est 
-                sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus
-                Donec sit.</p>
+                <h3>Intermediate Programs</h3>
+                <p>Foundation courses designed to bridge the gap between secondary education and university-level studies. Build essential skills in critical thinking, research, and academic writing.</p>
             </div>
             <div class="course-col">
-                <h3>Degree</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Pellentesque aliquet turpis nulla, eleifend faucibus est 
-                sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus
-                Donec sit.</p>
+                <h3>Undergraduate Degrees</h3>
+                <p>Comprehensive bachelor's programs across Arts, Sciences, Business, and Technology. Our curriculum combines theoretical knowledge with practical experience through internships and projects.</p>
             </div>
             <div class="course-col">
-                <h3>Post Graduation</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Pellentesque aliquet turpis nulla, eleifend faucibus est 
-                sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus
-                Donec sit.</p>
+                <h3>Post Graduate Studies</h3>
+                <p>Advanced master's and doctoral programs for specialized knowledge. Work alongside leading researchers and industry experts to advance your career and contribute to your field.</p>
             </div>
         </div>
-
     </section>
 
     <!---------Facilities------>
     <section class="facilities">
         <h1>Our Facilities</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <p>State-of-the-art amenities designed to support your academic journey and personal growth.</p>
 
         <div class="row">
             <div class="facilities-col">
-                <img src="images/images333.jpg">
+                <img src="images/images333.jpg" alt="World Class Library">
                 <h3>World Class Library</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Pellentesque aliquet turpis nulla.</p>
+                <p>Access over 2 million books, digital resources, and quiet study spaces. Our libraries are open 24/7 to support your learning needs.</p>
             </div>
             <div class="facilities-col">
-                <img src="images/Untitled.jpg">
-                <h3>Conducive Lecture Halls</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Pellentesque aliquet turpis nulla.</p>
+                <img src="images/Untitled.jpg" alt="Modern Lecture Halls">
+                <h3>Modern Lecture Halls</h3>
+                <p>Equipped with the latest audio-visual technology, our lecture halls provide an immersive learning environment for all students.</p>
             </div>
             <div class="facilities-col">
-                <img src="images/img_1042_3.jpg">
-                <h3>Healthy Food</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Pellentesque aliquet turpis nulla.</p>
+                <img src="images/img_1042_3.jpg" alt="Campus Dining">
+                <h3>Campus Dining</h3>
+                <p>Enjoy nutritious and delicious meals at our campus restaurants. We cater to all dietary preferences with locally sourced ingredients.</p>
             </div>
         </div>
     </section>
     
 
    
-     <!-------Footer------>
-     <section class="footer">
+    <!-------Footer------>
+    <footer class="footer">
         <h4>About Us</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Pellentesque aliquet turpis nulla, eleifend faucibus est <br> 
-            sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus
-            Donec sit.</p>
-            <div class="icons">
-                <i class="fa fa-facebook"></i>
-                <i class="fa fa-twitter"></i>
-                <i class="fa fa-instagram"></i>
-                <i class="fa fa-linkedin"></i>
-            </div>
-     </section>
+        <p>Eduford University is a leading global institution dedicated to academic excellence,<br>innovation, and shaping the leaders of tomorrow since 1950.</p>
+        <div class="icons">
+            <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+        <p class="copyright">&copy; 2024 Eduford University. All rights reserved.</p>
+    </footer>
 
 
 
