--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uviversity Webssite Design</title>
+    <meta name="description" content="Get in touch with Eduford University. Contact us for admissions, inquiries, or to schedule a campus visit.">
+    <meta name="keywords" content="contact, admissions, university contact, campus visit">
+    <meta name="author" content="Eduford University">
+    <title>Contact Us | Eduford University</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎓</text></svg>">
 <body>
     <section class="sub-header">
         <nav>
@@ -37,23 +42,23 @@
         <div class="row">
             <div class="contact-col">
                 <div>
-                    <i class="fa fa-home"></i>
+                    <i class="fas fa-home"></i>
                     <span>
-                        <h5>XYZ Road, ABC Buillding</h5>
-                        <p>Bangalore, Karnataka, IN</p>
+                        <h5>123 University Avenue</h5>
+                        <p>London, WC1A 1AA, UK</p>
                     </span>
                 </div>
                 <div>
-                    <i class="fa fa-phone"></i>
+                    <i class="fas fa-phone"></i>
                     <span>
-                        <h5>+234(0)7041303372</h5>
-                        <p>Monday to Saturday, 10AM to 6PM</p>
+                        <h5>+44 (0) 20 7946 0958</h5>
+                        <p>Monday to Friday, 9AM to 5PM GMT</p>
                     </span>
                 </div>
                 <div>
-                    <i class="fa fa-envelope-o"></i>
+                    <i class="fas fa-envelope"></i>
                     <span>
-                        <h5>info@universitypage.org</h5>
+                        <h5>admissions@eduford.edu</h5>
                         <p>Email us your query</p>
                     </span>
                 </div>
@@ -64,7 +69,7 @@
                     <input type="email" name="email" placeholder="Enter email address" required>
                     <input type="text" name="subject" placeholder="Enter your subject" required>
                     <textarea rows="8" name="message" placeholder="Message" required></textarea>
-                    <button type="submit" hero-btn red-btn>Send Message</button>
+                    <button type="submit" class="hero-btn red-btn">Send Message</button>
                 </form>
             </div>
     </section>
@@ -73,20 +78,18 @@
     
     
 
-     <!-------Footer------>
-     <section class="footer">
+    <!-------Footer------>
+    <footer class="footer">
         <h4>About Us</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Pellentesque aliquet turpis nulla, eleifend faucibus est <br> 
-            sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus
-            Donec sit.</p>
-            <div class="icons">
-                <i class="fa fa-facebook"></i>
-                <i class="fa fa-twitter"></i>
-                <i class="fa fa-instagram"></i>
-                <i class="fa fa-linkedin"></i>
-            </div>
-     </section>
+        <p>Eduford University is a leading global institution dedicated to academic excellence,<br>innovation, and shaping the leaders of tomorrow since 1950.</p>
+        <div class="icons">
+            <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+        <p class="copyright">&copy; 2024 Eduford University. All rights reserved.</p>
+    </footer>
 
 
 
